# laptopsupport

./: .gitmodules  CMakeLists.txt  README  laptopsupport.cpp  laptopsupport.h  laptopsupport.pri  laptopsupport.pro  systemwatch.cpp  systemwatch.h  systemwatchunix.cpp  systemwatchunix.h
cmake/: CMakeLists.txt.example  plugin.cmake  translations.cmake
qmake/: config.inc  debug.inc  plugin.inc  plugin.pro.example  translations.inc
translations/: tsrelease.sh  tsupdate.sh
